# marketing-analytics-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
dags/: airflow_dag.py
src/ingestion/: generate_sources.py
src/pipeline/: dag.py  report.py  staging.py  transform.py
src/quality/: checks.py
tests/: test_pipeline.py
