[project]
name = "marketing-analytics-pipeline"
version = "1.0.0"
description = "Multi-source marketing analytics ELT pipeline: DuckDB warehouse, dbt-style layered SQL transformations, a custom DAG orchestrator with data-quality gating, and an Airflow DAG reference for production deployment."
authors = [{ name = "Muhammad Farooq Shafi", email = "mfarooqsgafee333@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
